# dodbooksourcecode

./: .travis.yml  CMakeLists.txt  FSM_OOFunctional.h  FSM_OOImplicitState.h  FSM_OOState.h  FSM_OOStateDynamic.h  FSM_Simple.h  FSM_TableState.h  FSM_TableStatePointers.h  FSM_VaryingTableState.h  KeyLookup.cpp  LICENSE  README.md  basictheory.cpp  branch_prediction.cpp  cachegrind.sh  cachesizeeffect.cpp  common.h  false_sharing.cpp  fsm.cpp  fsm_oo.cpp  fsm_simple.cpp  fsm_table.cpp  fsm_tableptrs.cpp  geom.cpp  geom.h  hotcold.cpp  linkedlists.cpp  makefile  matrixtranspose.cpp  modifying_memory.cpp  pcg-random.h  readingtests.cpp  simd_test.cpp  speculativewaste.cpp
